# endrpi-server

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  definitions.py  endr.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  coverage.yml  power-on-test.yml  pypi-publish.yml  unit-tests.yml
endrpi/: cli.py  server.py
endrpi/_public/: app.js  index.html
endrpi/actions/: pin.py  system.py
endrpi/config/: logging.py  pin_factory.py
endrpi/model/: action_result.py  frequency.py  measurement.py  memory.py  message.py  pin.py  platform.py  system.py  temperature.py  throttle.py  up_time.py  websocket.py
endrpi/routes/: pin.py  system.py  websocket.py
endrpi/utils/: api.py  bitwise.py  process.py
public/: app.css  index.html
scripts/: code_coverage.py
test/: constants.py
test/integration/: test_routes_pin.py  test_routes_system.py  test_routes_websocket.py
test/unit/: test_actions_pin.py  test_actions_system.py  test_utils_api.py  test_utils_bitwise.py  test_utils_process.py
