#  Copyright (c) 2020 - 2021 Persanix LLC. All rights reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[metadata]
name = endrpi
version = 1.0.0b18
author = Persanix LLC
author_email = opensource@persanix.com
description = Endpoints for Raspberry Pi (Endrpi) is a web API server for the Raspberry Pi that provides basic statuses and GPIO controls through a collection of HTTP endpoints.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://endrpi.io
project_urls =
    Documentation = https://endrpi.io
    Source = https://github.com/persanix-llc/endrpi-server
    Bug Tracker = https://github.com/persanix-llc/endrpi-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
include = endrpi*
exclude = test

[options.entry_points]
console_scripts =
    endrpi = endrpi.cli:main

[options.package_data]
endrpi = _public/*